test/exceptions/catch-all-not-last.txt
;;; TOOL: wast2wasm
;;; FLAGS: --future-exceptions -v
;;; ERROR: 1
(module
  (except $ex i32)
  (func (result i32)
    (try $try1 (result i32)
      (nop)
      (i32.const 7)
      (catch $ex
        (nop)
      )
      (catch_all
        (rethrow $try1)
      )
      (catch $ex
        (nop)
      )
    )
  )
) 
(;; STDERR ;;;
out/test/exceptions/catch-all-not-last.txt:16:8: error: Appears after catch all block
      (catch $ex
       ^^^^^
;;; STDERR ;;)
